# rust-chat-workshop

./: .gitignore  Cargo.toml  Dockerfile  README.md  _redirects  index.html
.github/workflows/: deploy.yml
app/: Cargo.toml  app-b28c906092d24ce5.js  app-b28c906092d24ce5_bg.wasm  index.html
app/src/: chat_ui.rs  connection.rs  main.rs  models.rs
assets/: DrawingControls.b6fc1edc.js  DrawingControls.vue_vue_type_script_setup_true_lang.6498a99d.js  DrawingLayer.9e9f1762.js  DrawingPreview.647943f1.js  Presenter.22d08692.js  index.adff2d46.js  index.decf9771.css
loadtest/: ws.js
models/src/: lib.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  room.rs
slides/: package-lock.json  slides.md
