[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
tokio-tungstenite = "0.17"
serde = "1"
serde_json = "1"
futures-util = "0.3"

hyper = { version = "0.14.20", features = ["full"] }
hyper-tungstenite = "0.8.1"

models = { path = "../models" }